Apply OpenRewrite Java 17 modernization